--- a/pasta/style.css
+++ b/pasta/style.css
@@ -15,7 +15,7 @@
     justify-content: end;
     font-size: 10px;
     font-family: 'Dancing Script', cursive;
-    background-color: #000;
+    padding: 15px;
 }
 
 nav {
@@ -44,48 +44,32 @@ nav a::after {
 
 nav a:hover::after {
     width: 100%;
-    background-color:#9F09FC;
+    background-color: #9F09FC;
 
 }
 
-.titullloo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color:#fff;
-    margin-right: 10px;
-    font-family: 'Dancing Script', cursive;
-    font-size: 85px;
-    gap: 10px;
-}
+/*--------------------------- ----------------------------------------------------------------*/
 
 .div1 {
     display: flex;
-    justify-content: space-evenly;
-}
-
-.img {
-    display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    margin: 20px;
     align-items: center;
-    margin: 30px 40px 50px 50px;
-    color: #fff;
-    
 }
 
-.primeiroimg1 {
-    border-radius: 10%;
-}
-
-.texto1 {
+.titullloo {
     display: flex;
-    flex-direction: column;
-    margin: 30px 20px 50px 20px;
-    color:#fff;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    margin-right: 9px;
+    font-family: 'Dancing Script', cursive;
+    font-size: 70px;
+    gap: 10px;
 }
 
-.nome{
-    color:#9F09FC;
+.nome {
+    color: #9F09FC;
 }
 
 .texto11 {
@@ -99,48 +83,259 @@ nav a:hover::after {
 
 }
 
-.card {
+/*--------------------------- primeira parte do main-----------------------------------------------------------------*/
+.img {
     display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 30px 40px 50px 50px;
+    color: #fff;
+
+}
+
+.primeiroimg1 {
+    border-radius: 10%;
+    box-shadow: 20px 20px 50px rgb(0, 0, 0.5);
+
+}
+
+.texto1 {
+    display: flex;
+    flex-direction: column;
     margin: 30px 20px 50px 20px;
     color: #fff;
-    font-size: 29.2px;;
-    padding: 15px;
-    font-family: 'Dancing Script', cursive;
-    border-radius: 10px;
 }
 
 
-.parte_2 {
+/*---------------------------------------------------------------------------------------------*/
+.formes {
+    display: flex;
+    color: #9F09FC;
+    font-size: 50px;
+    font-family: 'Dancing Script', cursive;
+    justify-content: center;
+}
+
+/*------------------------segunda parte do main --------------------------------------------------------------------*/
+.card00 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 40px 70px 40px 70px;
+    color: #fff;
+    font-size: 20px;
+}
+
+.card_1 {
+    margin-right: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #9F09FC;
+    width: 200px;
+    height: 400px;
+    box-shadow: 20px 20px 50px rgb(0, 0, 0.5);
+    border-radius: 15px;
+    padding: 50px;
+}
+
+.img_card_2 {
+    border-radius: 75px;
+}
+
+.card_11 {
+    margin: 10px 0px 10px 0px;
+}
+
+/*--------------------------------------------------------------------------------------------*/
+.container_11 {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    margin: 30px 20px 50px 20px; 
-    padding: 15;  
-    border-radius: 10px;
-    font-family: 'Dancing Script', cursive;
-    font-size: 29.2px;
-}
-
-.parte_3{
-    display: flex;
-    margin: 30px 20px 50px 20px;
-    border-radius: 10px;
-}
-
-.parte_4{
-    display: flex;
-    margin: 30px 20px 50px 20px;
     color: #fff;
-    font-size: 29.2px;
-    padding: 15px;
-    font-family: 'Dancing Script', cursive;
-    border-radius: 10px;
+    font-family: 'Kalam', cursive;
+    font-size: 20px;
 }
 
-.div1 {
+.segundabola {
+    display: flex;
+    border-radius: 105px;
+    margin: 150px 0px 150px 150px;
+
+}
+
+.container_12 {
+    margin-left: 40px;
+    font-size: 30px;
+}
+
+.nicolas {
     display: flex;
     justify-content: center;
-    margin: 20px;
-    align-items: center;
+    margin-top: 30px;
+    font-size: 40px;
+    font-family: 'Dancing Script', cursive;
+    color: #9F09FC;
 }
 
+/*--------------------------------------------------------------------------------------------*/
+
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: #232427;
+}
+
+.selection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px 45px;
+    background: #9F09FC;
+    width: 500px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    border-radius: 40px;
+}
+
+section h2 {
+    color: #f5f5f5;
+    font-size: 2.5rem;
+    margin: 2rem;
+}
+
+section form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+form label {
+    color: #f5f5f5;
+    font-size: 17px;
+    margin-bottom: 4px;
+}
+
+form input {
+    padding: 15px;
+    outline: none;
+    border: 0;
+    margin-bottom: 20px;
+    font-size: 15px;
+    transition: all 0.5s;
+}
+
+form input:focus {
+    border-radius: 16px;
+}
+
+form textarea {
+    padding: 10px;
+    outline: none;
+    border: 0;
+    font-size: 15px;
+    margin-bottom: 30px;
+    transition: all 0.5s;
+}
+
+form textarea:focus {
+    border-radius: 16px;
+}
+
+form button {
+    padding: 15px;
+    cursor: pointer;
+    font-size: 16px;
+    background: transparent;
+    border: 2px solid #f5f5f5;
+    color: #f5f5f5;
+    transition: all 1s;
+    margin-bottom: 20px;
+}
+
+form button:hover {
+    background: #f5f5f5;
+    color: #9F09FC;
+    border-radius: 16px;
+}
+
+@media (max-width:700px) {
+
+    .primeiraimg1{
+        display: flex;
+        margin-top: 10px;
+    }
+
+    nav a{
+        font-size: 24px;
+        align-items: center;
+        justify-content: center;
+    }
+    .header{
+        margin-top: 50px;
+    }
+
+    .div1 {
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .texto11 {
+        align-items: center;
+        justify-content: center;
+        margin-left: 80px;
+    }
+
+    .titullloo{
+        display: flex;
+        flex-direction: column;
+        font-size:50px ;
+    }
+
+    .texto11{
+        display: flex;
+        font-size:20px;
+        justify-content: center;
+        margin-right: 70px;
+        width: 50vh;
+    }
+
+    .formes{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+    padding: 10px;
+    }
+
+    .card00 {
+        flex-direction: column;
+    }
+
+    .card_1 {
+        margin-bottom: 30px;
+    }
+
+    .formes {
+        width: 100%;
+    }
+
+    .container_11{
+        display: flex;
+    }
+
+    .container_12{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-right: 30px;
+    }
+
+    .segundabola{
+        margin: 10px;
+    }
+
+    
+}
