--- a/style.css
+++ b/style.css
@@ -262,18 +262,25 @@ form button:hover {
     border-radius: 16px;
 }
 
-@media (max-width: 375px) {
-    .header {
-        display: flex;
-        font-size: 8px;
-        font-family: 'Dancing Script', cursive;
-        margin: 10px;
-        padding: right 4px;
+@media (max-width: 480px) {
+    .header{
+        margin-top: 30px;
+    }
+
+    nav a {
+        align-items: center;
+        font-size: 20px;
+    }
+    a {
+        justify-content: center;
+        margin-top: 100px;
     }
 
     .div1 {
         display: flex;
         flex-direction: column;
+        margin: 1px;
+        font-size: 1px;
     }
 
     .img {
@@ -282,4 +289,28 @@ form button:hover {
         width: 100vh;
         margin: 20px;
     }
+
+    .primeiroimg1{
+        display: flex;
+        width: 53vh;
+    }
+    .titullloo{
+        font-size: 27px;
+    }
+
+    .texto1 {
+        font-size: 10px;
+        flex-direction: column;
+        margin: 20px;
+     }
+     .formes{
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        margin: 0px 0px 10px 80px;
+    }
+
+     .texto11{
+        
+     }
 }
