--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ form button:hover {
     .img {
         display: flex;
         justify-content: center;
-        width: 90vh;
+        width: 100vh;
         margin: 20px;
     }
 
@@ -295,7 +295,7 @@ form button:hover {
         width: 53vh;
     }
     .titullloo{
-        font-size: 27px;
+        font-size: 29px;
     }
 
     .texto1 {
@@ -312,6 +312,7 @@ form button:hover {
 
      .texto11{
         font-size: 20px;
+        margin: 40px 20px 20px;
      }
 
     .card00{
@@ -320,5 +321,35 @@ form button:hover {
     .card_1{
         justify-content: center;
         margin: 10px 20px 10px 20px;
+    }
+
+    .segundabola {
+       margin: 10px;
+    }
+
+    .container_11{
+        flex-direction: column;
+        margin: 10px;
+    }
+    
+    .container_12{
+        margin: 15px 18px 10px;
+    }
+    
+    .nicolas{
+        margin-top:25px;
+    }
+
+    .footer{
+        display: flex;
+    }
+
+    .selection{
+        width: 240px;
+        border-radius: 30px;
+    }
+
+    .input{
+        border-radius: 15px;
     }
 }
