--- a/style.css
+++ b/style.css
@@ -199,6 +199,11 @@ nav a:hover::after {
     background: #9F09FC;
     width: 500px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    border-radius: 15px;
+}
+
+.input{
+    border-radius: 15px;
 }
 
 section h2 {
@@ -226,6 +231,7 @@ form input {
     margin-bottom: 20px;
     font-size: 15px;
     transition: all 0.5s;
+    border-radius: 15px;
 }
 
 form input:focus {
@@ -261,7 +267,8 @@ form button:hover {
     color: #9F09FC;
     border-radius: 16px;
 }
-
+/*--------------------------------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------------------------*/
 @media (max-width: 480px) {
     .header{
         margin-top: 30px;
