--- a/obrigado.css
+++ b/obrigado.css
@@ -27,6 +27,11 @@
      border-radius: 16px;
  }
  @media (max-width: 480px) {
+
+    .main{
+        flex-direction: column;
+    }
+
     .text{
         justify-content: center;
         margin-left: 7px;
@@ -35,5 +40,19 @@
     .paragrafo{
         color:  #9F09FC;
         font-size:19px ;
+    }
+ }
+ @media ( min-width:480px) {
+    .text{
+        justify-content: center;
+        color: #9F09FC;
+    }
+
+    .text{
+        flex-direction: column;
+    }
+
+    .btn{
+        color: #9F09FC;
     }
  }
