--- a/style.css
+++ b/style.css
@@ -185,92 +185,17 @@ nav a:hover::after {
 }
 
 /*--------------------------------------------------------------------------------------------*/
-
-
-.footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background: #232427;
-}
-
-.selection {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 10px 45px;
-    background: #9F09FC;
-    width: 500px;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    border-radius: 15px;
+.whats{
+    position: fixed;
+    margin-right: 20px;
+    bottom: 20px;
+    right: 20px;
+    z-index: 9999;
+    
+    
 }
 
 
-section h2 {
-    color: #f5f5f5;
-    font-size: 2.5rem;
-    margin: 2rem;
-}
-
-section form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-
-form label {
-    color: #f5f5f5;
-    font-size: 17px;
-    margin-bottom: 4px;
-}
-
-
-form input {
-    padding: 15px;
-    outline: none;
-    border: 0;
-    margin-bottom: 25px;
-    font-size: 15px;
-    transition: all 0.5s;
-    border-radius: 15px;
-}
-
-form input:focus {
-    border-radius: 16px;
-}
-
-form textarea {
-    padding: 10px;
-    outline: none;
-    border: 0;
-    font-size: 15px;
-    margin-bottom: 30px;
-    transition: all 0.5s;
-}
-
-form textarea:focus {
-    border-radius: 16px;
-}
-
-form button {
-    padding: 15px;
-    cursor: pointer;
-    font-size: 16px;
-    background: transparent;
-    border: 2px solid #f5f5f5;
-    color: #f5f5f5;
-    transition: all 1s;
-    margin-bottom: 20px;
-}
-
-form button:hover {
-    background: #f5f5f5;
-    color: #9F09FC;
-    border-radius: 16px;
-}
-/*--------------------------------------------------------------------------------------------*/
 /*--------------------------------------------------------------------------------------------*/
 @media (max-width: 480px) {
     .header{
