--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
     font-family: 'Dancing Script', cursive;
     padding: 15px;
 }
-
 nav {
     text-align: center;
     margin-top: 40px;
@@ -110,11 +109,10 @@ nav a:hover::after {
 /*---------------------------------------------------------------------------------------------*/
 .formes {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
     color: #9F09FC;
-    font-size: 50px;
-    font-family: 'Dancing Script', cursive;
-    margin: 50px 0px 100px 100px;
-    padding-right: 100px;
 
 }
 
@@ -195,9 +193,12 @@ nav a:hover::after {
 
 
 /*--------------------------------------------------------------------------------------------*/
-@media (max-width: 480px) {
+@media (max-width: 767px) {
     .header{
-        margin: 30px 0px 10px 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
     }
 
     nav a {
@@ -219,8 +220,6 @@ nav a:hover::after {
     .img {
         display: flex;
         justify-content: center;
-        width: 100vh;
-        margin: 20px;
     }
 
     .primeiroimg1{
@@ -240,7 +239,7 @@ nav a:hover::after {
         justify-content: center;
         align-items: center;
         font-size: 20px;
-        margin: 0px 0px 10px 80px;
+        margin: 0px 0px 10px 20px;
     }
 
      .texto11{
